Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -666,6 +666,7 @@
             </a>
             <a href="#shop" class="btn-ghost">
               Browse the Collection
+              <elevenlabs-convai agent-id="agent_6801kcjd42n3fah9v6w6a1z9qvx6"></elevenlabs-convai><script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
             </a>
           </div>
           <div class="hero-meta">
@@ -1045,3 +1046,4 @@
   </script>
 </body>
 </html>
+
